v2.4.2  - Added EDL Edit window.
v2.4.1  - Added Blend Modes (Traditional and Premult) for compositing.
v2.3.10 - Fixed playback of Essa.wmv due to use of dts in loop.
v2.3.9  - Fixed reverse playback and looping last frame.
v2.3.8  - Fixed seek of image sequences.
v2.3.7  - Fixed audio loading for image sequences and avi files.
       	 Fixed movie saving with audio.
v2.3.6  - Made window never expand beyond desktop boundaries, leaving title bar always in view.
v2.3.5  - Added audio float and multichannel playback on windows.
v2.3.4  - Made reverse playback a tad more memory efficient.
v2.3.3  - Fixed reverse playback.