@@ -88,8 +88,6 @@ class ViewerUI;
     // List devices available for playback on machine
     static const DeviceList& devices();
 
-       virtual void SoundFocus( mrv::ViewerUI* ui ) {};
-
     // Return default device (must be first one added)
     std::string default_device() const;
 
