@@ -7,7 +7,8 @@ export     CTL_ROOT="F:/code/lib/Deploy"
 export FFMPEG_ROOT="F:/code/lib/ffmpeg-20130606-git--win64-dev"
 
 export  GLUT_ROOT_PATH="F:/code/lib/freeglut/"
-export   FLTK2_DIR="F:/code/lib/Deploy"
+#export   FLTK2_DIR="F:/code/lib/Deploy"
+export FLTK2_DIR="F:/code/lib/fltk-2.0.x-alpha-r9166"
 export MAGICK_HOME="F:/code/lib/ImageMagick-6.7.4"
 export GLEW_ROOT="F:/code/lib/x64/glew-1.9.0"
 export POSTGRESQL_ROOT="C:/Program Files/PostgreSQL/9.1"
