@@ -1,4 +1,6 @@
 v2.4.2  - Added EDL Edit window.
+	- Added reading of images in maya format ( name.ext.number )
+	- Fixed playback of EDL when edits are made.
 v2.4.1  - Added Blend Modes (Traditional and Premult) for compositing.
 v2.3.10 - Fixed playback of Essa.wmv due to use of dts in loop.
 v2.3.9  - Fixed reverse playback and looping last frame.
